--- a/client/src/stylesheets/listStyle.css
+++ b/client/src/stylesheets/listStyle.css
@@ -1,7 +1,8 @@
 .defaultList {
     display: block;
-    margin-left: -2.2em;
+    margin-left: -4em;
     font-size: 1em;
+    width: 100%;
 }
 
 .defaultList li {
@@ -19,10 +20,6 @@
 }
 
 .nestedList button {
-}
-
-.bookLinks {
-  border-right: 0.05em solid #dddddd;
 }
 
 .bookLinks ul {
