--- a/client/src/stylesheets/userLibrary.css
+++ b/client/src/stylesheets/userLibrary.css
@@ -50,14 +50,14 @@
         float: none;
         overflow:auto;
         margin-left: -3.4em;
-        margin-top: -1em;
+        margin-top: -2.1em;
         width: 120%;
     }
 
     .libraryMenu li {
         display: block;
-        background: #f5f5f5;
-        border-bottom: 1px solid #d4d4d4;
+        background: #fafafa;
+        border-bottom: 1px solid #ebebeb;
     }
 
     .libraryMenu a {
